syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "machine_discovery.proto";
import "security_group.proto";

package forge;

//import "machine_discovery.proto";

service Forge {
  // Domain
  rpc CreateDomain(Domain) returns (Domain);
  rpc UpdateDomain(Domain) returns (Domain);
  rpc DeleteDomain(DomainDeletion) returns (DomainDeletionResult);
  rpc FindDomain(DomainSearchQuery) returns (DomainList);
  // VPC
  rpc CreateVpc(Vpc) returns (Vpc);
  rpc UpdateVpc(Vpc) returns (Vpc);
  rpc DeleteVpc(VpcDeletion) returns (VpcDeletionResult);
  rpc FindVpcs(VpcSearchQuery) returns (VpcList);

  // Segments - i.e. Overlay Networks
  rpc FindNetworkSegments(NetworkSegmentQuery) returns (NetworkSegmentList);
  rpc CreateNetworkSegment(NetworkSegment) returns (NetworkSegment);
  rpc UpdateNetworkSegment(NetworkSegment) returns (NetworkSegment);
  rpc DeleteNetworkSegment(NetworkSegmentDeletion) returns (NetworkSegmentDeletionResult);
  rpc NetworkSegmentsForVpc(VpcSearchQuery) returns (NetworkSegmentList);

  // Manage instances on machines
  rpc CreateInstance(Instance) returns (Instance);
  rpc UpdateInstance(Instance) returns (Instance);
  rpc FindInstances(InstanceSearchQuery) returns (InstanceList);
  rpc FindInstanceByMachineID(UUID) returns (InstanceList);
  rpc DeleteInstance(InstanceDeletionRequest) returns (InstanceDeletionResult);
  
  rpc LookupRecord(DNSMessage.DNSQuestion) returns (DNSMessage.DNSResponse);
//  rpc LookupPTRRecord(DnsRequest) returns (DnsReply);

  // TODO(ajf): Harder to implement bi-directional streaming, commented out for now
  // rpc StreamConsole(stream ConsoleInput) returns (stream ConsoleOutput);
  // rpc StreamInstanceEvents(UUID) returns (stream InstanceEvent);

  /* Power Control */
  rpc InvokeInstancePower(InstancePowerRequest) returns (InstancePowerResult);

  // PRIVILEGED: Creates a new machine from nothing
  rpc DiscoverMachine(MachineDiscoveryInfo) returns (MachineDiscoveryResult);
  rpc Done(UUID) returns (Machine);
  rpc DiscoverDhcp(DhcpDiscovery) returns (DhcpRecord);

  // PRIVILEGED: Get a single machine
  rpc GetMachine(UUID) returns (Machine);

  // PRIVILEGED: Find a list of machines
  rpc FindMachines(MachineSearchQuery) returns (MachineList);
  rpc FindInterfaces(InterfaceSearchQuery) returns (InterfaceList);

  // PRIVILEGED: Define and manage new instance types
  rpc CreateInstanceType(InstanceType) returns (InstanceType);
  rpc UpdateInstanceType(InstanceType) returns (InstanceType);
  rpc DeleteInstanceType(InstanceTypeDeletion) returns (InstanceTypeDeletionResult);

  // Tags handling
  rpc CreateTag(TagCreate) returns (TagResult);
  rpc DeleteTag(TagDelete) returns (TagResult);
  rpc ListTags(TagVoid) returns (TagsListResult);

  rpc AssignTag(TagAssign) returns (TagResult);
  rpc RemoveTag(TagRemove) returns (TagResult);
  rpc SetTags(TagsList) returns (TagResult);

  // Auth Requests
  rpc ValidateUserSSHKey(SSHKeyValidationRequest) returns (SSHKeyValidationResponse);
  
  // IPMI handling
  rpc GetBMCMetaData(BMCMetaDataRequest) returns (BMCMetaDataResponse);
  rpc UpdateBMCMetaData(BMCMetaData) returns (BMCStatus);

  // SecurityGroup
  // Create or update a security group in its entirety.
  rpc UpdateSecurityGroupPolicy(SecurityGroupPolicy) returns(SecurityGroupPolicy);
  // Delete a security group.
  rpc DeleteSecurityGroupPolicy(SecurityGroupPolicyDeletion) returns(google.protobuf.Empty);
  // Associate a security group with some entities.
  rpc BindSecurityGroup(SecurityGroupBind) returns(google.protobuf.Empty);
  // Disassociate a security group with some entities.
  rpc UnbindSecurityGroup(SecurityGroupBind) returns(google.protobuf.Empty);
  // List all or one security group policy.
  rpc ListSecurityGroupPolicies(SecurityGroupPolicyQuery) returns(SecurityGroupPolicyList);
  // List all or one security group binds.
  rpc ListSecurityGroupBinds(SecurityGroupBindQuery) returns(SecurityGroupBindList);

  rpc GetPxeInstructions(UUID) returns (PxeInstructions);
}

message DNSMessage {

  message DNSQuestion {
    optional string qName = 1;  // FQDN including trailing dot
    optional uint32 qType = 2;  //
    optional uint32 qClass = 3; // Usually 1 (IN)
  }
  message DNSResponse {
    message DNSRR {
      optional string rdata = 5;
    }
    optional uint32 rcode = 1;
    repeated DNSRR rrs = 2;
  }
  optional DNSQuestion question = 1;
  optional DNSResponse response = 2;
}

message DnsRequest {
  string query = 1;
}

message DnsReply {
  string reply = 1;
}

message DomainList {
  repeated Domain domains = 1;
}

message Domain {
  UUID id = 1;
  string name = 2;

  google.protobuf.Timestamp created = 3;
  google.protobuf.Timestamp updated = 4;
  google.protobuf.Timestamp deleted = 5;
}

message DomainDeletion {
  UUID id = 1;
}

message DomainDeletionResult {

}

message DomainSearchQuery {
  optional UUID id = 1;
  optional string name = 2;
}

message ConsoleInput {
  string input = 1;
}

message ConsoleOutput {
  string output = 1;
}

message InstanceEvent {
  string event = 1;
}


// Primitives
message UUID {
  string value = 1;
}

message VpcSearchQuery {
  optional UUID id = 1;
  optional string name = 2;
}

message Vpc {
  UUID id = 1;
  string name = 2;
  string organization = 3;

  google.protobuf.Timestamp created = 4;
  google.protobuf.Timestamp updated = 5;
  google.protobuf.Timestamp deleted = 6;
}

message VpcDeletion {
  UUID id = 1;
}

message VpcDeletionResult {
}

message VpcList {
  repeated Vpc vpcs = 1;
}

message NetworkSegment {
  UUID id = 1;
  UUID vpc_id = 2;

  string name = 3;

  optional UUID subdomain_id = 4;
  optional int32 mtu = 5;

  repeated NetworkPrefix prefixes = 6;

  google.protobuf.Timestamp created = 11;
  google.protobuf.Timestamp updated = 12;
  google.protobuf.Timestamp deleted = 13;
}

message NetworkPrefix {
  UUID id = 1;
  string prefix = 2;
  optional string gateway = 3;
  int32 reserve_first = 4;
  VpcResourceState state = 5;
  repeated NetworkPrefixEvent events = 6;
}

message NetworkSegmentDeletion {
  UUID id = 1;
}

message NetworkSegmentQuery {
  UUID id = 1;
}

message MachineState {
  string state = 1;
}

message NetworkSegmentDeletionResult {
}

enum InstanceTypeCapabilities {
  DEFAULT = 0;
}

message InstancePowerRequest {
  UUID machine_id = 1;
  enum Operation {
    POWER_RESET = 0;
  }
  Operation operation = 2;
  bool boot_with_custom_ipxe = 3;
}

message InstanceType {
  UUID id = 1;
  string short_name = 2;
  string description = 3;

  repeated InstanceTypeCapabilities capabilities = 4;

  bool active = 5;
  google.protobuf.Timestamp created = 6;
  google.protobuf.Timestamp updated = 7;
}

message InstanceTypeDeletion {
  UUID id = 1;
}

message InstancePowerResult {
}

message InstanceTypeDeletionResult {}

message InstanceSearchQuery {
  optional UUID id = 1;
}

message InstanceList {
  repeated Instance instances = 1;
}

message Instance {
  UUID id = 1;
  UUID segment_id = 2;
  UUID machine_id = 3;

  optional string user_data = 4;
  string custom_ipxe = 5;

  repeated string ssh_keys = 6;

  google.protobuf.Timestamp requested = 7;
  google.protobuf.Timestamp started = 8;
  google.protobuf.Timestamp finished = 9;

  repeated InstanceSubnet interfaces = 10;
  bool use_custom_pxe_on_boot = 11;
  UUID managed_resource_id = 12;
}

message PhysicalFunction {}
message VirtualFunction {
  int32 vfid = 1;
}


message InstanceSubnet {
  UUID id = 1;
  UUID machine_interface_id = 2;
  UUID network_segment_id = 3;
  optional UUID instance_id = 4;
  optional int32 vfid = 5;
  repeated string addresses = 6;
  VpcResourceState state = 7;
  repeated InstanceSubnetEvent events = 8;
  repeated NetworkSegment network_segments = 9;
   oneof interface_function {
    PhysicalFunction pf = 10;
    VirtualFunction  vf = 11;
  }
}

message InstanceDeletionRequest {
  UUID id = 1;
}

message InstanceDeletionResult {
}

message MachineSearchQuery {
  optional UUID id = 1;
  optional string fqdn = 2;
}

message InterfaceList {
  repeated MachineInterface interfaces = 1;
}

message MachineList {
  repeated Machine machines = 1; 
}

message InterfaceSearchQuery {
  optional UUID id = 1;
}

message Machine {
  UUID id = 1;
  optional UUID vpc_leaf_id = 2;
  InstanceType supported_instance_type = 3;

  google.protobuf.Timestamp created = 4;
  google.protobuf.Timestamp updated = 5;
  google.protobuf.Timestamp deployed = 6;

  string state = 7;

  repeated MachineEvent events = 8;
  repeated MachineInterface interfaces = 9;

  optional machine_discovery.DiscoveryInfo discovery_info = 10;
}

enum MachineArchitecture {
  ARM = 0;
  X86 = 1;
}

message MachineEvent {
  int64 id = 1;
  UUID  machine_id = 2;

  MachineAction event = 3;

  google.protobuf.Timestamp time = 4;
}

message MachineInterface {
  UUID id = 1;
  optional UUID attached_dpu_machine_id = 2;
  UUID machine_id = 3;
  UUID segment_id = 4;

  string hostname = 5;

  UUID domain_id = 6;

  bool primary_interface = 7;
  string mac_address = 8;

  repeated string address = 9;
}

enum MachineAction {
  UNKNOWN = 0;
  DISCOVER = 1;
  ADOPT = 2;
  TEST = 3;
  COMMISSION = 4;
  ASSIGN = 5;
  FAIL = 6;
  DECOMMISSION = 7;
  RECOMMISSION = 8;
  UNASSIGN = 9;
  RELEASE = 10;
  CLEANUP = 11;
}

message DhcpDiscovery {
  string mac_address = 1;
  string relay_address = 2;
  optional string vendor_string = 3;
  optional string link_address = 4;
}

message DhcpRecord {
  UUID machine_id = 1;
  UUID machine_interface_id = 2;
  UUID segment_id = 3;
  UUID subdomain_id = 4;

  string fqdn = 5;
  string mac_address = 6;
  string address = 7;

  int32 mtu = 8;

  string prefix = 9;
  optional string gateway = 10;
}

message NetworkSegmentList {
  repeated NetworkSegment network_segments = 1;
}

message Tag {
  string slug = 1;
  optional string name = 3;  // Mandatory in case of CREATE action.
}

message TagCreate {
  Tag tag = 1;
}

message TagDelete {
  Tag tag = 1;
}

message TagResult {
  bool result = 1;
}

message TagVoid {
}

message TagsList {
  repeated string slugs = 1;
  UUID target = 2;
  TagTargetKind target_kind = 3;
}

message TagsListResult {
  repeated Tag tags = 1;
}

enum TagTargetKind {
  MACHINE = 0;
  NETWORK_SEGMENT = 1;
}

message TagAssign {
  string slug = 1;
  UUID target = 2;
  TagTargetKind target_kind = 3;
}

message TagRemove {
  string slug = 1;
  UUID target = 2;
  TagTargetKind target_kind = 3;
}

message SSHKeyValidationRequest {
    string user = 1;
    string pubkey = 2;
}

enum UserRoles {
  USER = 0;
  ADMINISTRATOR = 1;
  OPERATOR = 2;
  NOACCESS = 3;
}

message SSHKeyValidationResponse {
    bool is_authenticated = 1;
    UserRoles role = 2;
}

enum BMCRequestType {
    IPMI = 0;
    REDFISH = 1;
}

message BMCMetaDataRequest {
    UUID machine_id = 1;
    UserRoles role = 2;
    BMCRequestType request_type = 3;
}

message BMCMetaDataResponse {
    string ip = 1;
    string user = 2;
    string password = 3;
}

message BMCMetaData {
    message DataItem {
        string user = 2;
        UserRoles role = 3;
        string password = 4;
    }
    
    UUID machine_id = 1;
    string ip = 2;
    repeated DataItem data = 3;
    BMCRequestType request_type = 4;
}

message BMCStatus {}

message MachineDiscoveryInfo {
  UUID machine_id = 1;
  oneof discovery_data {
    machine_discovery.DiscoveryInfo info = 2;
  }
}

message MachineDiscoveryResult {
  // This is returned to the discovery client from the API. Lets try not to put much in here unless we need it.
}

message VpcResourceState {
    string state = 1;
}

message NetworkPrefixEvent {
  int64 id = 1;

  UUID network_prefix_id = 2;

  VpcResourceAction event = 3;

  google.protobuf.Timestamp time = 4;
}

message VpcResourceLeafEvent {
  int64 id = 1;

  UUID vpc_leaf_id = 2;

  VpcResourceAction event = 3;

  google.protobuf.Timestamp time = 4;
}

message InstanceSubnetEvent {
  int64 id = 1;
  UUID instance_subnet_id = 2;
  VpcResourceAction event = 3;
  google.protobuf.Timestamp time = 4;
}

enum VpcResourceAction {
  VPC_INITIALIZE = 0;
  VPC_SUBMIT = 1;
  VPC_ACCEPT = 2;
  VPC_WAIT = 3;
  VPC_FAIL = 4;
  VPC_SUCCESS = 5;
  VPC_RECOMMISSION = 6;
}

message PxeInstructions {
    string pxe_script = 1;
}
